--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,20 @@
         android:theme="@style/Theme.StudentApp"
         tools:targetApi="31">
         <activity
-            android:name=".RegisterActivity"
+            android:name=".Onboarding_Activity"
             android:exported="false" />
+        <activity
+            android:name=".Language_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".Splash_Activity"
+            android:exported="true" />
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Design.NoActionBar"
+            />
         <activity
             android:name=".SelectUserActivity"
             android:exported="true">
@@ -25,7 +37,7 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
