--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,22 +48,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
          </activity>
-
-        <activity
-            android:name=".Splash_Activity"
-            android:exported="true"
-            tools:ignore="DuplicateActivity" />
-        <activity
-            android:name=".RegisterActivity"
-            android:exported="false"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.Design.NoActionBar"
-            tools:ignore="DuplicateActivity" />
-        <activity
-            android:name=".Language_Activity"
-            android:exported="false"
-            tools:ignore="DuplicateActivity">
-        </activity> <!-- <activity -->
+        <!-- <activity -->
         <!-- android:name=".SelectUserActivity" -->
         <!-- android:exported="false"> -->
         <!--  -->
