--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
+            android:theme="@style/Theme.Design.NoActionBar"
             android:name=".Onboarding_Activity"
             android:exported="false" />
         <activity
